<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

	<TableLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
	
	    <TableRow
	        android:id="@+id/tableRow01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/mylattd_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/lattd_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/tableRow02"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView02"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/mylngtd_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/lngtd_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow03"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView03"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/simoper_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Simoper"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow04"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView04"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/simopername_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Simopername"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow05"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView05"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/deviceid_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/DeviceId"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow06"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView06"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/simserial_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Simserial"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow07"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView07"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/phonetype_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Phonetype"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow08"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView08"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/phonenumber_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Phonenumber"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow09"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView09"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/softwareversion_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Softwareversion"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView10"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/towernetworkidlngtd_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Towernetworkid"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView11"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/towerid_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Towerid"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView12"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/towerlattd_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Towerlatitude"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	
	    <TableRow
	        android:id="@+id/TableRow13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/TextView13"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/towerlngtd_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/Towerlongitude"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow14"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	        <TextView
	            android:id="@+id/textView14"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/signal_t_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	        <TextView
	            android:id="@+id/signal_t_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	        
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow15"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView15"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/signal_b_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/signal_b_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow16"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView16"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/signal_a_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/signal_a_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	
	    </TableRow>
	    
	    <TableRow
	        android:id="@+id/tableRow17"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView17"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="2"
	            android:text="@string/signal_d_pfx"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="20sp" />
	
	        <TextView
	            android:id="@+id/signal_d_val"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical|center_horizontal"
	            android:layout_weight="1"
	            android:text="@string/default_val"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textSize="18sp" />
	
	    </TableRow>
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="center_vertical|center_horizontal" >
	
	        <Button
	            android:id="@+id/button1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="refreshPosition"
	            android:text="@string/refresh_btn" />
	    </LinearLayout>
	
	</TableLayout>
</ScrollView>